Update: describe your changes

--- a/constitution-app-html/index.html
+++ b/constitution-app-html/index.html
@@ -21,7 +21,7 @@
         <!-- Header -->
         <header class="header">
             <h1>Who wrote your constitution</h1>
-            <p class="subtitle">The pioneers of modern Indian polity</p>
+            <p class="subtitle">The pioneers of modern Indian polity.</p>
         </header>
         <header class="postheader"></header>
 
