Modal code from manus 2

--- a/index.html
+++ b/index.html
@@ -66,7 +66,20 @@
                 </div>
             </div>
         </div>
-
+        <!-- Member Lightbox Modal -->
+        <div id="members-modal" class="modal">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 id="modal-title">Members from <span id="modal-state-name"></span></h2>
+                    <button class="modal-close" onclick="closeMembersModal()">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div id="members-list" class="members-list">
+                        <!-- Members will be populated here -->
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Footer -->
         <footer class="footer">
             <p><a href="https://www.nikhilkulkarni.in/search/label/MiddleEast%26IndiaSeries" target="_blank">Read more thoughts about the Indian constitution</a></p>
